# udacity_genai_project

./: .gitignore  README.md  pyproject.toml  requirements.txt  result.json
data/apollo11/: transcript.txt  transcript_metadata.json
data/apollo13/: transcript.txt  transcript_metadata.json
data/challenger/: transcript.txt  transcript_metadata.json
evaluation/: evaluate_pipeline.py  evaluation_dataset.txt  evaluation_results.json
src/: chat.py  embedding_pipeline.py  llm_client.py  rag_client.py  ragas_evaluator.py
test/: test_embedding_pipeline.py  test_file_reader.py  test_llm_client.py  test_rag_client.py  test_ragas.py
vector_db/unit_test/: chroma.sqlite3
