[project]
name = "udacity-genai-project"
version = "1.0.0"
description = "NASA Mission Operations Specialist"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.0",
    "langchain-openai>=1.1.6",
    "numpy>=2.4.0",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ragas>=0.4.2",
    "rapidfuzz>=3.14.3",
    "rouge-score>=0.1.2",
    "ruff>=0.14.11",
    "sacrebleu>=2.5.1",
    "streamlit>=1.52.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = ["N", "E5", "I"]
ignore = ["N818", "N803"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
